# Icarus

./: .bazelrc  .clang-format  .gitignore  .gitmodules  BUILD  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bazel  a.out  alloc  codebase_navigation.md  common.bzl  compile_all.sh  context.cc  context.h  defs.bzl  fmt.cc  foo.bc  foo.ll  foo.s  icarus.vim  import_graph.h  leak.suppress  main.cc  makefile  match.cc  module.cc  module.h
ast/: BUILD  access.cc  access.h  array_literal.cc  array_literal.h  array_type.cc  array_type.h  ast.h  ast_fwd.h  binop.cc  binop.h  block_literal.cc  block_literal.h  block_node.cc  block_node.h  bound_constants.cc  bound_constants.h  build_param_dependency_graph.cc  build_param_dependency_graph.h  builtin_fn.cc  builtin_fn.h  call.cc  call.h  cast.cc  cast.h  chainop.cc  chainop.h  comma_list.cc  comma_list.h  compile_ast_dependencies.h  debug_string.cc  declaration.cc  declaration.h  defs.bzl  dispatch.cc  dispatch.h  dispatch_table.cc  dispatch_table.h  dispatch_table_test.cc  enum_literal.cc  (+59 more)
ast_visitor/: BUILD  assign_scope.cc  assign_scope.h  assign_scope.xmacro.h  dependent_decls.cc  dependent_decls.h  emit_ir.h  emit_ir.xmacro.h  emit_ir_copy_init.cc  emit_ir_move_init.cc  emit_ir_ref.cc  emit_ir_val.cc  extract_jumps.cc  extract_jumps.h  verify_type.cc  verify_type.h  visitors.xmacro.h
backend/: BUILD  backend.h  common.bzl  emit.cc  emit.h  eval.cc  eval.h  exec.cc  exec.h  function.cc  function.h  llvm.cc  llvm.h  type.cc  type.h  type_test.cc
base/: BUILD  any_invocable.h  any_invocable_test.cc  bag.h  blah.h  cast.h  (+70 more)
(+2322 files in other folders)
